--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -15,6 +15,12 @@ body {
   font-family: "Montserrat", sans-serif;
   line-height: 1.6;
   padding: 5rem;
+  color: $text-color;
+  font-size: 1.6rem;
+}
+
+section {
+  padding: 10rem;
 }
 
 .container {
