--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,7 @@
+@import "abstracts/variables";
+
 @import "base/base";
 @import "base/typography";
 
 @import "layout/hero";
+@import "layout/about";
