--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -17,10 +17,7 @@ body {
   padding: 5rem;
   color: $text-color;
   font-size: 1.6rem;
-}
-
-section {
-  padding: 10rem;
+  font-weight: 300;
 }
 
 .container {
