--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,6 +20,12 @@ body {
   font-weight: 300;
 }
 
+a:link,
+a:visited,
+a:active {
+  color: inherit;
+}
+
 .container {
   box-shadow: 0 0 3rem rgba(black, 0.3);
 }
