--- a/src/sass/layout/_project.scss
+++ b/src/sass/layout/_project.scss
@@ -1,4 +1,60 @@
 .projects {
 
-  padding: 6rem 5rem;
+  padding: 6rem 10rem;
+
+}
+
+.project {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 3rem;
+  margin-bottom: 5rem;
+
+  &__info {
+    margin-top: 5rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 3rem;
+  }
+
+  &__image {
+    width: 32rem;
+    height: auto;
+    display: inline-block;
+    box-shadow: 0 0 3rem -1rem rgba(black, 0.5);
+    border: 0.1rem solid rgba(black, 0.5);
+  }
+
+  &__details {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  &__link {
+    text-decoration: none;
+    width: 20rem;
+    text-align: center;
+    padding: 1rem 2rem;
+    font-size: 1.4rem;
+    color: #fff !important;
+    background: hsl(205, 76%, 39%);
+
+    &:not(:last-child) {
+      margin-bottom: 2rem;
+    }
+
+    &--github {
+      border: 0.05rem solid rgba(black, 0.5);
+      background: #fff;
+      color: currentColor !important;
+    }
+
+    &--dribbble {
+      font-size: 1.4rem;
+      padding-bottom: 2rem;
+      color: currentColor !important;
+      text-decoration: underline;
+    }
+  }
 }
